feat: Backend tranformed to REST
Signed-off-by: Marek Forys <mforys73@gmail.com>